# webquery

./: .gitignore  CMakeLists.txt  LICENSE
apps/: CMakeLists.txt  webquery.cpp
include/webquery/: context.hpp  sqlparser.hpp
src/: CMakeLists.txt  context.cpp  sqlparser.cpp
tests/: CMakeLists.txt  test_context.cpp  test_sqlparser.cpp
